# DataBUS_TiliaPollen

./: .gitignore  .gitmodules  CITATION.cff  LICENSE.txt  README.md  excel_to_yaml.py  functions.py  insertleadmodel.sql  ostracode_template.xlsx  partial_site.py  pyproject.toml  requiredFields.yaml  requirements.txt  template.csv  template.yml  template_spreadsheet.xlsx  template_upload.py  template_validate.py  template_xlsx.xlsx  uncertaintyadditions.md  validators.py
data/: AgnesTemplateExample.csv  AgnesTemplateExample.xlsx  AgnesTemplateFixed.csv
docs/: tablecolumns.csv
neotomaHelpers/: __init__.py  clean_column.py  clean_numbers.py  csv_to_yaml.py  excel_to_yaml.py  get_contacts.py  logging_dict.py  parse_arguments.py  process_inputs.py  process_site_inputs.py  pull_overwrite.py  pull_params.py  template_to_dict.py
neotomaUploader/: README.rst  YamlValues .py  __init__.py  checkFile.py  check_file.py  cleanCol.py  clean_column.py  csvValidator.py  csv_validator.py  getAgent.py  hashFile.py  hash_file.py  insertAnalysisUnit.py  insertChronology.py  insertCollUnit.py  insertDataProcessor.py  insertDataset.py  insertDatasetPI.py  insertGeoPol.py  insertSamples.py  insertSite.py  insert_analysisunit.py  insert_chron_control.py  insert_chronology.py  insert_collunit.py  insert_data.py  insert_data2.py  insert_data_processor.py  insert_data_repository.py  insert_data_uncertainties.py  insert_dataset.py  insert_dataset_database.py  insert_dataset_pi.py  insert_dataset_repository.py  insert_geopol.py  insert_sample.py  insert_sample_age.py  insert_sample_analyst.py  insert_site.py  parseArguments.py  (+33 more)
neotomaUploader/neotomauploader/: __init__.py  cleanCol.py  getAgent.py  insertAnalysisUnit.py  insertChronControl.py  insertSite.py  validDate.py  validGeoPol.py  validHorizon.py  validSite.py  validunits.py
neotomaUploader/tests/: test_neotomauploader.py
neotomaValidator/: __init__.py  check_file.py  csv_validator.py  validGeoPol.py  validUnits.py  valid_agent.py  valid_analysisunit.py  valid_chroncontrols.py  valid_chronologies.py  valid_collunit.py  valid_column.py  valid_dataset.py  valid_horizon.py  valid_site.py  valid_taxa.py  vocabDict.py
sqlHelpers/: aunit_query.sql  chron_control_query.sql  chron_query.sql  collunit_query.sql  dataset_query.sql  insert_data_uncertainties.sql  repository_query.sql  sample_age_query.sql  sample_query.sql  site_query.sql  upsert_collunit.sql  upsert_site.sql
src/: csv_splitter.py  eanode_data_upload.py  eanode_template_validate.py  find_error_msg.py  insert_chronologies_ost.py  insert_sample_age_ost.py  node_data_upload.py  node_template_validate.py  test_template_enode.py  valid_chronologies_ost.py
src/templates/: eanode_template.yml  eanode_template_spreadsheet.xlsx  node_template.yml  node_template_spreadsheet.xlsx  tiliapollen_spreadsheet.csv
src/utils/: csv_splitter.py  data_cleaner.py  eanode_data_cleaner.py  insert_chronologies_ost.py  insert_collector.py  insert_dataset.py  insert_geopolitical_units.py  insert_sample_age_ost.py  inserting_taxa.py  node_data_cleaner.py  parse_text.py  process_dataset_notes.py  valid_chronologies_ost.py  valid_geopolitical_units.py  valid_sample_age_ost.py
