[tool.poetry]
name = "neotomaUploader"
version = "0.1.0"
description = "A toolkit to upload records to Neotoma."
authors = ["Simon Goring <simon.j.goring@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
DateTime = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scriv = {extras = ["toml"], version = "^1.2.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

readme = "README.md"